# tool-system

./: .gitignore  AGENTS.md  README.md  REPO_MANIFEST.md  p4c_probe.txt  pyproject.toml
blueprint/: tool_system_v0.yaml
config/: governance_reference_v1.yaml  module_registry_schema_v1.json  module_registry_v1.yaml  process_authority_schema_v1.json  process_authority_v1.yaml  replay_snapshot_v1.yaml
docs/: agent_role_taxonomy_v1.md  model_provider_portfolio_and_economics_contract_v1.md  process_authority_contract_v1.md  tool_system_global_development_principles_v1.md  tool_system_module_registry_adoption_contract_v1.md
examples/: active_gates.yaml
harness/: task_manifest.schema.json
policy/: autonomy_policy.yaml  repo_write_policy.yaml
src/tool_system/: __init__.py
tests/: test_active_gate_resolver.py  test_active_gates.py  test_agent_role_taxonomy.py  test_agent_scheduler.py  test_agent_worker_interface.py  test_ai_worker_contract.py  test_ai_worker_fixture_provider.py  test_ai_worker_live_provider.py  test_alignment_gate.py  test_audit_bundle.py  test_change_plan_gate.py  test_change_plan_scope_extra.py  test_cleanup_plan.py  test_command_runner.py  test_controller_actions.py  test_controller_run.py  test_controller_self_check.py  test_dag_planner.py  test_durable_orchestrator_recovery.py  test_durable_orchestrator_reliability.py  test_durable_orchestrator_side_effects.py  test_durable_orchestrator_state.py  test_execution_approval.py  test_execution_state_snapshot.py  test_final_record.py  test_finance_os_dry_run_probe.py  test_github_state_adapter.py  test_global_principles.py  test_governance_reference.py  test_live_github_collector.py  test_main_ci.py  test_milestone_module_invariant.py  test_model_provider_portfolio_contract.py  test_module_contracts.py  test_module_import_graph.py  test_module_registry.py  test_module_registry_adoption_contract.py  test_multi_task.py  test_mutation_command_packet.py  (+32 more)
(+434 files in other folders)
