[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-system"
version = "0.1.0"
description = "Domain-agnostic spec-driven harness and policy gate for controlled agentic software development."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
tool-system-validate-task-manifest = "tool_system.cli.validate_task_manifest:main"
tool-system-validate-change-plan = "tool_system.cli.validate_change_plan:main"
tool-system-execute-change-plan = "tool_system.cli.execute_change_plan:main"
tool-system-evaluate-repo-write = "tool_system.cli.evaluate_repo_write:main"
tool-system-evaluate-github-state = "tool_system.cli.evaluate_github_state:main"
tool-system-controller-run = "tool_system.cli.controller_run:main"
tool-system-validate-active-gates = "tool_system.cli.validate_active_gates:main"
tool-system-observe-main-ci = "tool_system.cli.observe_main_ci:main"
tool-system-target-repo-dry-run = "tool_system.cli.target_repo_dry_run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
